url-shortener-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener
spec:
  replicas: 25
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
      - name: url-shortener
        image: samyak1053/url-shortener:latest  
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m  # Minimum CPU requested
            memory: 128Mi  # Minimum memory requested
          limits:
            cpu: 500m  # Maximum CPU allowed
            memory: 512Mi  # Maximum memory allowed
      imagePullSecrets:
      - name: regcred   
---
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-service
spec:
  selector:
    app: url-shortener
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 5000 
  type: LoadBalancer
