ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: url-shortener.local  # The host you want to use
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: url-shortener-service  # Service to forward traffic to
            port:
              number: 80
